compiler/src/test/resources/golden/errors/java_unresolved_method.dawn
use java "java.lang.StringBuilder"

pub fn main() -> Unit !io = {
  let sb = StringBuilder.new()
  let c = sb.charAt(0)
  println("done")
}
