compiler/src/test/resources/golden/errors/java_unresolved_method.err
error: `java.lang.StringBuilder` has no method `charAt`
  --> java_unresolved_method.dawn:5:14
  |
5 |   let c = sb.charAt(0)
  |              ^^^^^^
  = hint: Java calls are value.method(...) for instance methods; fields are not supported in v0.1
